# photo_booth

./: .gitignore  btn.sh  pyproject.toml  req.txt  test.py  tester.py
app/: add_usb_printers.sh  app.py  base.db  buttons.py  main_content.py  run_myscript.sh
app/components/: buttons.py  const.py  history.py  main.py  page_preview.py  photo_history.py  photo_page.py  print_page.py  sessionList.py  settings_page.py  user_choise.py
app/components/settings/: template_view.py  template_view_cut.py  test_cut_template.py  test_templates.py
app/components/tests/: printer_test.py
app/templates/template_1/: 1.json
app/templates/template_2/: 2.json
app/templates/template_3/: 1.json
app/templates/Приходит пудж на мид/: 1.json  2.json
app/templates/Тема 1/: 1.json  2.json
app/templates/Тема 2/: 1.json  2.json
