[tool.poetry]
name = "photo-booth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "photo_booth"}]

[tool.poetry.dependencies]
python = "^3.11"
flet = "0.18.0"
opencv-python = "^4.9.0.80"
psutil = "^5.9.8"
pillow = "^10.3.0"
pycups = "^2.0.1"
evdev = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
